--- a/demoProject1/src/main/resources/templates/index.html
+++ b/demoProject1/src/main/resources/templates/index.html
@@ -13,11 +13,11 @@
 
     <pre>
         src/main/java 하위 패키지에
-        oooApplication.java 파일이 프로젝트 생성 시 자동 생성됨
-        000 은 프로젝트 이름
+        000Application.java 파일이 프로젝트 생성 시 자동 생성됨
+        (000 은 프로젝트 이름)
 
         해당 클래스에는 main메서드 존재
-        -> 실행 -> 내장된 Tomcat 서버가 배포 시작
+        -> 실행(ctrl + f11) -> 내장된 Tomcat 서버가 배포 시작
         브라우저가 자동으로 실행되지 않기 때문에 각자 주소 입력
         
 
