--- a/demoProject2/src/main/resources/templates/example/ex1.html
+++ b/demoProject2/src/main/resources/templates/example/ex1.html
@@ -15,7 +15,7 @@
   <h1>타임리프 예제 1</h1>
   <pre>
     Spring EL(스프링 표현 언어)
-    - ${key} : 변수, Model 등을 이요해서 세팅한 값 출력
+    - ${key} : 변수, Model 등을 이용해서 세팅한 값 출력
 
     th:text 속성 = "속성값"
     - 타임리프를 이용해서 속성 값을 작성된 태그의 내용(innerText)로 출력
