--- a/demoProject2/src/main/resources/templates/common/main.html
+++ b/demoProject2/src/main/resources/templates/common/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,10 +53,29 @@
         <li>
             <a href="/example/ex3">타임리프예제3</a>
         </li>
-
+        <br>
         <li>
             <a href="/example/ex4">타임리프예제4</a>
         </li>
+        <br>
+        <li>
+            <a href="/example/ex5">타임리프예제5</a>
+        </li>
+        <br>
+        <hr>
+        
     </ol>
+
+    <h3>fragments/temp.html 중 temp1 조각 추가하기</h3>
+    <!-- controller 에서 forward시 타임리프가 제공하는 
+         접두사, 접미사를 제외한 경로 작성 -->
+    <th:block th:replace="~{fragments/temp :: temp1}"></th:block>
+
+    기본적으로 div 태그가 생성이 되는건가? -> 아니다!
+
+    <th:block th:replace="~{fragments/temp :: temp2}"></th:block>
+
+    <!-- html 파일 전체를 하나의 조각으로 취급 -->
+    <th:block th:replace="~{fragments/footer}"></th:block>
 </body>
 </html>
