--- a/demoProject2/src/main/resources/templates/example/ex4.html
+++ b/demoProject2/src/main/resources/templates/example/ex4.html
@@ -102,5 +102,8 @@
 
     <!-- std.toString()결과 출력 -->
     <p th:text="${std} ?: _">학생 데이터 없음</p>
+
+    <!-- html 파일 전체를 하나의 조각으로 취급 -->
+    <th:block th:replace="~{fragments/footer}"></th:block>
 </body>
 </html>
