--- a/TodoList-boot/src/main/resources/templates/common/main.html
+++ b/TodoList-boot/src/main/resources/templates/common/main.html
@@ -42,15 +42,13 @@
 
 
     <tbody>
-    
+      <!-- th:each 향상된 for문 반복 -->
       <tr th:each="todo : ${todoList}"  th:object="${todo}">
 
         <td th:text="*{todoNo}">할 일 번호</td>
 
-        <td>
-          <a th:href="@{/todo/detail(todoNo=*{todoNo})}" 
-             th:text="*{todoTitle}">할 일 제목</a>
-        </td>
+        <td> <a th:href="@{/todo/detail(todoNo=*{todoNo})}" th:text="*{todoTitle}">할 일 제목</a> </td>
+        <!-- ()부분 : 쿼리스트링으로 해석 /todo/detail?todoNo=todoNo= -->
 
         <td th:text="*{complete}">완료 여부(Y/N)</td>
 
@@ -59,18 +57,10 @@
     </tbody>
   </table>
 
-
-
-  <!-- 타임리프 값을 JS 자료형 맞게 변환 -->
-  <script th:inline="javascript">
-    const message = /*[[${message}]]*/ "전달 받은 메시지";
-                  // 전달 받은 message가 없으면 null
-
-    if(message != null){
-      alert(message);
-    }
-  </script>
-
-
+  <!-- 
+    footer.html 조각을 해당 위치에 추가
+    (조각의 경로는 forward 하듯이 작성(접두사, 접미사 생략))
+  -->
+  <th:block th:replace="~{common/footer}"></th:block>
 </body>
 </html>
