--- a/TodoList-boot/src/main/resources/templates/common/main.html
+++ b/TodoList-boot/src/main/resources/templates/common/main.html
@@ -6,7 +6,11 @@
   <title>TodoList - Boot</title>
 </head>
 <body>
-  <h1>Todo List</h1>
+  <h1>Todo List 동기식</h1>
+  <hr>
+
+  <h3>  <a href="/ajax/main">TodoList - Ajax 버전</a> </h3>
+
   <hr>
 
   <form action="/todo/add" method="POST">
