--- a/TodoList-boot/src/main/resources/static/css/ajax-main.css
+++ b/TodoList-boot/src/main/resources/static/css/ajax-main.css
@@ -60,3 +60,30 @@
 
 #popupClose:hover{color: gray;}
 #popupClose:active{color: red;}
+
+/* 수정 팝업 레이어 */
+#updateLayer{
+    width: 400px;
+    height: 250px;
+
+    border: 3px solid black;
+    border-radius: 15px;
+    background-color: rgba(81, 214, 238, 0.95);
+
+    position: fixed; /* 브라우저에서 위치 고정 */
+
+    /* 브라우저 정가운데 배치 */
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#updateTitle{
+    width: 200px;
+}
