--- a/boardProject/src/main/resources/templates/common/main.html
+++ b/boardProject/src/main/resources/templates/common/main.html
@@ -42,12 +42,12 @@
               <!-- 아이디/비밀번호 입력 -->
               <section>
                 <input type="text" 
-                       name="memberEmail"
-                       placeholder="이메일">
+                      name="memberEmail"
+                      placeholder="이메일">
   
                 <input type="password" 
-                       name="memberPw" 
-                       placeholder="비밀번호">
+                      name="memberPw" 
+                      placeholder="비밀번호">
               </section>
   
               <!-- 로그인 버튼 -->
@@ -84,8 +84,8 @@
 
               <!-- messages.properties에 작성된 기본 사용자 이미지 -->
               <img th:src="#{user.default.image}" 
-                   id="memberProfile"
-                   alt="프로필 이미지 없음" >
+                  id="memberProfile"
+                  alt="프로필 이미지 없음" >
             </a>
 
             <!-- 닉네임, 이메일, 로그아웃 버튼 영역 -->
@@ -94,7 +94,7 @@
               <div>
                 <a href="#" id="nickname" th:text="*{memberNickname}">닉네임</a>
 
-                <a href="#" id="logoutBtn">로그아웃</a>
+                <a href="/member/logout" id="logoutBtn">로그아웃</a>
               </div>
 
               <p th:text="*{memberEmail}">이메일</p>
@@ -113,5 +113,6 @@
   <!-- common/footer.html 추가 -->
   <th:block th:replace="~{common/footer}"></th:block>
 
+  <script src="/js/main.js"></script>
 </body>
 </html>
