--- a/boardProject/src/main/resources/static/css/main-style.css
+++ b/boardProject/src/main/resources/static/css/main-style.css
@@ -358,3 +358,68 @@ a{
   color: gray;
 }
 
+/* ************ header 오른쪽 상단 메뉴 ************ */
+header{
+  position: relative; /* 기준점 */
+}
+
+/* 헤더 메뉴를 감싸는 놈 */
+.header-top-menu{
+  position: absolute;
+  right: 10px;
+  top: 20px;
+}
+
+.header-top-menu *{
+  font-size: 15px;
+  font-weight: bold;
+}
+
+/* 헤더 메뉴 체크박스 */
+#headerMenuToggle{display: none;}
+
+/* 닉네임부분 */
+label[for="headerMenuToggle"]{
+  cursor: pointer;
+  user-select: none;
+}
+
+label[for="headerMenuToggle"]:hover{
+  text-decoration: underline;
+}
+
+/* 체크박스 다음 형제요소 */
+#headerMenuToggle + div{
+  display: none;
+}
+
+/* 체크된headerMenuToggle 체크박스 다음 형제 요소 */
+#headerMenuToggle:checked + div{
+  display: block;
+}
+
+/* 닉네임 클릭 시 보이는 메뉴 */
+.header-menu{
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  right: 0;
+  margin-top: 5px;
+  border: 1px solid black;
+}
+
+.header-menu > a{
+  display: flex;
+  height: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-menu > a:first-child{
+  border-bottom: 1px solid #ccc;
+}
+
+.header-menu > a:hover{
+  color: white;
+  background-color: var(--main-color);
+}
