--- a/boardProject/src/main/resources/templates/common/main.html
+++ b/boardProject/src/main/resources/templates/common/main.html
@@ -115,10 +115,11 @@
             <div class="my-info" th:object="${session.loginMember}">
 
               <div>
-                <a href="#" id="nickname" th:text="*{memberNickname}">닉네임</a>
+                <a href="/myPage/info" id="nickname" th:text="*{memberNickname}">닉네임</a>
 
                 <a href="/member/logout" id="logoutBtn">로그아웃</a>
               </div>
+
 
               <p th:text="*{memberEmail}">이메일</p>
 
