비밀번호 변경하기 + 마이페이지

--- a/boardProject/src/main/resources/templates/mypage/myPage-info.html
+++ b/boardProject/src/main/resources/templates/mypage/myPage-info.html
@@ -86,5 +86,7 @@
    <!-- 푸터 추가 -->
    <th:block th:replace="~{common/footer}"></th:block>
   
+
+  <script src="/js/mypage/myPage.js"></script>
 </body>
 </html>
