--- a/boardProject/src/main/resources/templates/mypage/myPage-changePw.html
+++ b/boardProject/src/main/resources/templates/mypage/myPage-changePw.html
@@ -31,6 +31,33 @@
           새 비밀번호로 변경할 수 있습니다.
         </span>
 
+        
+        <form action="changePw" method="POST" name="myPageFrm" id="changePw">
+
+          <div class="myPage-row">
+            <label>현재 비밀번호</label>
+            <input type="password" name="currentPw" id="currentPw" maxlength="30" >              
+          </div>
+
+          <div class="myPage-row">
+            <label>새 비밀번호</label>
+            <input type="password" name="newPw" id="newPw" maxlength="30">              
+          </div>
+
+          <div class="myPage-row">
+            <label>새 비밀번호 확인</label>
+            <input type="password" name="newPwConfirm" id="newPwConfirm" maxlength="30">              
+          </div>
+
+          <button class="myPage-submit">변경하기</button>
+
+      </form>
+
+
+
+
+
+
       </section>
 
     </section>
