--- a/boardProject/src/main/resources/templates/common/main.html
+++ b/boardProject/src/main/resources/templates/common/main.html
@@ -26,6 +26,18 @@
         <button class="quick-login">member02@naver.com</button>
         <button class="quick-login">027619@naver.com</button>
 
+        <h3>특정 회원 비밀번호 초기화(Ajax)</h3>
+        <div>
+          회원번호 : 
+          <input type="text" id="resetMemberNo">
+          <button id="resetPw">비밀번호 초기화(pass01!)</button>
+        </div>
+
+        <h3>특정 회원 탈퇴 복구</h3>
+        회원 번호 : <input type="text" id="restoreMemNo">
+        <button id="restoreFl">회원 탈퇴 복구하기</button>
+        
+
         <h3>
           회원 목록 조회(비동기)
           <button id="selectMemberList">조회</button>
@@ -136,7 +148,6 @@
 
   <!-- common/footer.html 추가 -->
   <th:block th:replace="~{common/footer}"></th:block>
-
   <script src="/js/main.js"></script>
 </body>
 </html>
