--- a/boardProject/src/main/resources/templates/mypage/myPage-changePw.html
+++ b/boardProject/src/main/resources/templates/mypage/myPage-changePw.html
@@ -66,6 +66,6 @@
 
    <!-- 푸터 추가 -->
    <th:block th:replace="~{common/footer}"></th:block>
-  
+  <script src="/js/myPage/myPage.js"></script>
 </body>
 </html>
