--- a/boardProject/src/main/resources/templates/common/main.html
+++ b/boardProject/src/main/resources/templates/common/main.html
@@ -114,7 +114,7 @@
 
           <article class="login-area">
             
-            <a href="#">
+            <a href="/myPage/info">
               <!-- 프로필 이미지 -->
 
               <!-- messages.properties에 작성된 기본 사용자 이미지 -->
