파일 업로드 하는 방법

--- a/boardProject/src/main/resources/templates/mypage/myPage-fileTest.html
+++ b/boardProject/src/main/resources/templates/mypage/myPage-fileTest.html
@@ -25,53 +25,106 @@
 
       <!-- 마이페이지 본문(오른쪽) -->
       <section class="myPage-main">
-        <h3 class="myPage-title">파일 업/다운로드 테스트</h3>
+
+        <h1 class="myPage-title">파일 업/다운로드 테스트</h1>
 
         <pre>
-          [form 태그의 encType 속성]
-  
-          encType 은 무엇인가
+          
+          [form태그의 enctype 속성]
+
+          enctype 이란??
           - 데이터를 서버로 전송할 때 데이터의 형태(인코딩)를 지정하는 속성
-  
-          1. enctype="application/x-www-form-urlencoded"
-            - 기본값. URL 인코딩된 "문자열로" 서버에 제출
-  
-          2. enctype="multipart/form-data"(무조건 POST 방식에서만 동작)
-            - 제출되는 여러 데이터 타입에 맞춰서 인코딩하여 제출
-              -> 문자열 : String 
-              -> 숫자 : String(Spring에서 자료형 바뀜)
-              -> 파일 : 2진 데이터
-  
-          3. enctype="text/plain"
-          - 텍스트로 서버에 제출함
-  
+
+
+          * application/x-www-form-urlencoded (기본값)
+           - URL 인코딩된 "문자열" 로 서버에 제출
+
+
+          * multipart/form-data  (무조건 POST에서만 동작)
+
+           - 제출되는 여러 데이터 타입에 맞춰서 인코딩하여 제출
+            문자열 -> String
+            숫자   -> String -> int/double(Spring이 처리)
+            파일   -> 2진 데이터
+
+          * text/plain
+           - 텍스트로 서버에 제출
+
+
         </pre>
 
+        <form action="/myPage/file/test1" 
+          method="POST" 
+          name="myPageFrm"
+          enctype="multipart/form-data"  >
+          <h3>업로드 테스트 1</h3>
+          <!--
+             type="file"도 결국에는 Parameter
+              -> @RequestParam으로 처리 가능
+          -->
+          <input type="file" name="uploadFile">
 
-        <!--
-          type="file"도 결국에는 Parameter
-          -> @RequestParam으로 처리 가능
+          <button class="myPage-submit">제출하기</button>
+        </form>
+
+        <!-- 
+          a태그의 download 속성
+          - href 속성에 작성된 요청에 대한 응답을 다운로드함
         -->
 
-        <h4>파일 업로드 테스트 1</h4>
-        <form action="/myPage/file/test1" method="POST" name="myPageFrm" 
-        enctype="multipart/form-data">
+        <a th:if="${path != null}"
+           th:text="${path}"
+           th:href="${path}"   
+           download >   업로드한 파일</a>
+
+        <hr>
+
+        <form action="/myPage/file/test2"
+          method="POST" enctype="multipart/form-data" >
+
+          <h3>파일 업로드 + DB 저장 + 조회</h3>
 
           <input type="file" name="uploadFile">
 
           <button class="myPage-submit">제출하기</button>
 
-      </form>
+        </form>
 
-      <!--
-        a 태그의 download 속성
-        - href 속성에 작성 된 요청에 대한 응답을 다운로드함
-      -->
+        <hr>
 
-      <a th:if="${path != null}"
-        th:text="${path}"
-        th:href="${path}"   
-        download > 업로드한 파일 </a>
+        <br><br>
+
+        <form action="/myPage/file/test3"
+          method="POST" enctype="multipart/form-data" >
+
+          <h3>여러 파일 업로드</h3>
+
+          <pre>
+            방법
+
+            1) 같은 name 속성을 가지는 type="file" input태그를 여러개 작성
+
+            2) input 태그의 multiple 속성을 이용하여 한번에 여러개 제출 가능
+
+          </pre>
+
+          <div>
+            1번 방법) 같은 name 속성을 가지는 type="file" input태그를 여러개 작성
+            <input type="file" name="aaa"> <br>
+            <input type="file" name="aaa">
+          </div>
+          <br>
+          <hr>
+          <br>
+          <div>
+            2번 방법) input 태그의 multiple 속성을 이용하여 한번에 여러개 제출 가능
+            <input type="file" name="bbb" multiple>
+          </div>
+
+          <button class="myPage-submit">제출하기</button>
+
+        </form>
+
 
 
       </section>
@@ -82,6 +135,7 @@
 
    <!-- 푸터 추가 -->
    <th:block th:replace="~{common/footer}"></th:block>
-  <script src="/js/myPage/myPage.js"></script>
+  
+   <script src="/js/myPage/myPage.js"></script>
 </body>
 </html>
