--- a/BookManagementProject/src/main/resources/templates/registBook.html
+++ b/BookManagementProject/src/main/resources/templates/registBook.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>책 검색, 수정, 삭제</title>
 </head>
 <body>
     <h1>책 등록</h1>
-    <form action="/" method="post">
-        제목 : <input type="text"> <br><br>
-        저자 : <input type="text"> <br><br>
-        가격 : <input type="text"> <br><br>
+    <form action="/book/doReg" method="post" name="registBook">
+        제목 : <input type="text" name="inputTitle" id="inputTitle"> <br><br>
+        저자 : <input type="text" name="inputAuthor" id="inputAuthor"> <br><br>
+        가격 : <input type="number" name="inputPrice" id="inputPrice"> <br><br>
         <button>등록하기</button>
     </form>
+    <script src="/js/main.js"></script>
 </body>
 </html>
