--- a/BookManagementProject/src/main/resources/templates/editBookList.html
+++ b/BookManagementProject/src/main/resources/templates/editBookList.html
@@ -8,7 +8,7 @@
 <body>
     <h1> 책 검색, 수정, 삭제</h1>
 
-    <form action="#">
+    <form action="/book/editBookList" method="GET">
         제목 : <input type="text"> <button>검색</button>
     </form>
     <br><br>
