--- a/TodoList-boot/src/main/resources/templates/common/main.html
+++ b/TodoList-boot/src/main/resources/templates/common/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TodoList - Boot</title>
+  <title>TodoList - Boot1</title>
 </head>
 <body>
   <h1>Todo List 동기식</h1>
