--- a/boardProject/src/main/resources/templates/common/main.html
+++ b/boardProject/src/main/resources/templates/common/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,17 @@
   <!-- templates/common/common.html 조각으로 추가 -->
   <th:block th:replace="~{common/common}"></th:block>
 </head>
+
 <body>
 
   <main>
-    
+
     <!-- common/header.html 을 조각으로 추가 -->
     <th:block th:replace="~{common/header}"></th:block>
 
     <!-- 메인 페이지 내용  -->
     <section class="content">
-    
+
       <section class="content-1">
         <!-- 확인, 보충 등등 그때 그때 사용 -->
 
@@ -25,12 +27,12 @@
         <button class="quick-login">member01@naver.com</button>
         <button class="quick-login">member02@naver.com</button>
         <button class="quick-login">027619@naver.com</button>
-        
+
         <br><br>
 
         <h3>특정 회원 비밀번호 초기화(Ajax)</h3>
         <div>
-          회원번호 : 
+          회원번호 :
           <input type="text" id="resetMemberNo">
           <button id="resetPw">비밀번호 초기화(pass01!)</button>
         </div>
@@ -40,7 +42,7 @@
         <h3>특정 회원 탈퇴 복구</h3>
         회원 번호 : <input type="text" id="restoreMemNo">
         <button id="restoreFl">회원 탈퇴 복구하기</button>
-        
+
         <br><br>
 
         <h3>
@@ -49,19 +51,19 @@
         </h3>
 
         <table border="1" style="border-collapse: collapse;">
-        <thead>
-          <th>회원 번호</th>
-          <th>이메일</th>
-          <th>닉네임</th>
-          <th>탈퇴여부</th>
-        </thead>
+          <thead>
+            <th>회원 번호</th>
+            <th>이메일</th>
+            <th>닉네임</th>
+            <th>탈퇴여부</th>
+          </thead>
 
-        <tbody id="memberList">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tbody>
+          <tbody id="memberList">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tbody>
 
         </table>
       </section>
@@ -78,37 +80,33 @@
           <!-- 로그인 박스 -->
           <form action="/member/login" method="POST" id="loginForm">
             <fieldset class="id-pw-area">
-  
+
               <!-- 아이디/비밀번호 입력 -->
               <section>
-                <input type="text" 
-                      name="memberEmail"
-                      placeholder="이메일">
-  
-                <input type="password" 
-                      name="memberPw" 
-                      placeholder="비밀번호">
+                <input type="text" name="memberEmail" placeholder="이메일">
+
+                <input type="password" name="memberPw" placeholder="비밀번호">
               </section>
-  
+
               <!-- 로그인 버튼 -->
               <section>
                 <button>로그인</button>
               </section>
             </fieldset>
-  
+
             <label>
               <!-- label 태그 : input 태그의 제목을 나타내는 태그  -->
               <input type="checkbox" name="saveId">
               아이디 저장
               ⭕❌
             </label>
-  
+
             <article class="signup-find-area">
               <a href="/member/signup">회원가입</a>
               <span> | </span>
               <a href="#">ID/PW 찾기</a>
             </article>
-  
+
           </form>
         </th:block>
 
@@ -119,15 +117,13 @@
         <th:block th:if="${session.loginMember != null}">
 
           <article class="login-area">
-            
+
             <a href="/myPage/profile">
               <!-- 프로필 이미지 -->
 
               <!-- messages.properties에 작성된 기본 사용자 이미지 -->
-              <img th:with="user=#{user.default.image}" 
-                   th:src="${session.loginMember.profileImg ?: user }"
-                   id="memberProfile"
-                   alt="프로필 이미지" >
+              <img th:with="user=#{user.default.image}" th:src="${session.loginMember.profileImg ?: user }"
+                id="memberProfile" alt="프로필 이미지">
             </a>
 
             <!-- 닉네임, 이메일, 로그아웃 버튼 영역 -->
@@ -156,4 +152,5 @@
   <th:block th:replace="~{common/footer}"></th:block>
   <script src="/js/main.js"></script>
 </body>
+
 </html>
