--- a/boardProject/src/main/resources/templates/board/boardList.html
+++ b/boardProject/src/main/resources/templates/board/boardList.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!--  -->
 	<title>게시판 이름</title>
 
 	<th:block th:replace="~{common/common}"></th:block>
@@ -109,7 +108,7 @@
 
 			<div class="btn-area">
 				<!-- 로그인 상태일 때만 글쓰기 버튼 노출 -->
-				<button id="insertBtn">글쓰기</button>
+				<button id="insertBtn" th:if="${session.loginMember}">글쓰기</button>
 			</div>
 
 
@@ -174,6 +173,10 @@
 
 
 	<th:block th:replace="~{common/footer}"></th:block>
+
+	<script th:inline="javascript">
+		const boardCode = /*[[${boardCode}]]*/ "게시판 코드 번호";
+	</script>
 
 	<script src="/js/board/boardList.js"></script>
 
