--- a/boardProject/src/main/resources/templates/board/boardUpdate.html
+++ b/boardProject/src/main/resources/templates/board/boardUpdate.html
@@ -26,9 +26,6 @@
         <input type="text" name="boardTitle" placeholder="제목" th:value="${board.boardTitle}">
       </h1>
 
-
-
-
       <!-- 썸네일 영역 -->
       <h5>썸네일</h5>
       <div class="img-box">
@@ -40,7 +37,6 @@
           <span class="delete-image">&times;</span>
         </div>
       </div>
-
 
       <!-- 업로드 이미지 영역 -->
       <h5>업로드 이미지</h5>
@@ -95,15 +91,12 @@
       <input type="hidden" name="deleteOrder" value="">
 
       <!-- 수정 성공 시 주소(쿼리스트링) 유지용도 -->
-      <input type="hidden" name="querystring" >
+      <input type="hidden" name="querystring">
     </form>
 
   </main>
 
   <th:block th:replace="~{common/footer}"></th:block>
-
-  <script th:src="@{/js/board/boardUpdate.js}"></script>
-
 
   <!-- 이미지 미리보기 설정 -->
   <script th:inline="javascript">
@@ -112,11 +105,17 @@
 
     const previewList = document.querySelectorAll('img.preview');
 
+    const orderList = []; // 기존에 존재하던 이미지 순서를 기록
+
     for (let img of imageList) {
       previewList[img.imgOrder].src = img.imgPath + img.imgRename;
+      // 기존에 존재하던 이미지 순서 밀어넣기
+      orderList.push(img.imgOrder);
     }
 
   </script>
+
+  <script th:src="@{/js/board/boardUpdate.js}"></script>
 
 </body>
 
